Fix search results clipping and share mailto link.
Grow the SERP card to fit content like legacy, and encode the footer share email body with https URL.

--- a/frontend/public/css/partifi.css
+++ b/frontend/public/css/partifi.css
@@ -1792,6 +1792,7 @@ a.red:hover
 	top: 5px;
 	left: 0px;
 	background-image: url('/images/box_middle.png');
+	overflow: visible;
 }
 
 .search-results {
